creat: add cart alert in book_category.html/css/js

--- a/src/pages/book_category.html
+++ b/src/pages/book_category.html
@@ -4,7 +4,12 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" href="../favicon.png" type="image/x-icon" sizes="16x16">
+        <link
+            rel="icon"
+            href="../favicon.png"
+            type="image/x-icon"
+            sizes="16x16"
+        />
         <link rel="stylesheet" href="../css/book_category.css" />
         <title>엘라딘</title>
     </head>
@@ -79,10 +84,9 @@
             <!-- 메인 영역 시작 -->
             <main class="main">
                 <div class="main-container container">
-                    <nav class="nav-side-category-bar">
-                    </nav>
+                    <nav class="nav-side-category-bar"></nav>
                     <section class="category-book-list-section">
-                            <div class="category-book-title">경영/경제</div>
+                        <div class="category-book-title">경영/경제</div>
                         <ul class="category-book-list">
                             <!-- <li class="category-book-item">
                                 <div class="category-book-item-img-area">
@@ -304,9 +308,9 @@
                                     </a>
                                 </li>
                                 <!-->
-                            </ul>
-                            
-                            <!-- <a href="" class="category-book-page-next">
+                        </ul>
+
+                        <!-- <a href="" class="category-book-page-next">
                                 <div class="category-page-next-text">
                                     <svg
                                         width="14px"
@@ -325,8 +329,22 @@
                                     </svg>
                                 </div>
                             </a> -->
-                        </div>
                     </section>
+                    <div class="cart-alert">
+                        <div class="cart-alert-container">
+                            <div class="quit_btn">
+                                <button class="close-alert">&times;</button>
+                            </div>
+                            <div class="cart-alert-content">
+                                <h2>상품이 장바구니에 담겼습니다.</h2>
+                                <p>장바구니로 이동하시겠습니까?</p>
+                            </div>
+                            <div class="cart-alert-button">
+                                <button class="cancel-button">취소</button>
+                                <button class="confirm-button">확인</button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </main>
             <!-- 메인 영역 종료 -->
@@ -371,5 +389,5 @@
     <script src="../js/isLogin.js"></script>
     <script src="../api/logout.js"></script>
     <script src="../api/mypage.js"></script>
-    <script type="module"src="../js/book_category.js"></script>
+    <script type="module" src="../js/book_category.js"></script>
 </html>
