feat: add swiper image

--- a/src/index.html
+++ b/src/index.html
@@ -129,6 +129,7 @@
                             <div class="swiper-slide snd"></div>
                             <div class="swiper-slide trd"></div>
                             <div class="swiper-slide fth"></div>
+                            <div class="swiper-slide fiv"></div>
                         </div>
                         <div class="swiper-button-prev"></div>
                         <div class="swiper-button-next"></div>
