--- a/src/pages/order_ok.html
+++ b/src/pages/order_ok.html
@@ -6,53 +6,72 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="icon" href="../favicon.png" type="image/x-icon" sizes="16x16">
-        <link rel="stylesheet" type="text/css" href="../css/order_ok.css" />
+        <link rel="stylesheet" href="../css/order_ok.css" />
         <title>Eladin</title>
     </head>
     <body>
         <div id="wrap">
-            <header id="header">
-                <div class="container">
-                    <div class="row">
-                        <div class="header">
-                            <div class="header-logo">
-                                <!-- <img src="../img/test.jpeg" alt="로고 이미지"> -->
-                                <a href="../index.html"><h1>Eladin</h1></a>
+            <header class="header">
+                <div class="header-container container">
+                    <div class="header-top-bar">
+                        <ul class="header-top-list">
+                            <li class="header-top-item">
+                                <a href="./signup.html" class="join"
+                                    >회원가입</a
+                                >
+                            </li>
+                            <li class="header-top-item">
+                                <a href="./login.html" class="login">로그인</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="header-title">
+                        <nav class="header-title-nav">
+                            <div class="header-title-logo">
+                                <a
+                                    href="../index.html"
+                                    class="header-title-link"
+                                >
+                                    <div class="header-title-name">Eladin</div>
+                                </a>
                             </div>
-                            <div class="header-user">
-                                <div class="header-user-login">
-                                    <ul>
-                                        <li>
-                                            <a href="./signup.html">회원가입</a>
-                                        </li>
-                                        <li>
-                                            <a href="./login.html">로그인</a>
-                                        </li>
-                                    </ul>
+                            <form class="header-title-search" role="seacrch">
+                                <div class="header-title-search-bar">
+                                    <img
+                                        src="https://svgsilh.com/svg/1093183.svg"
+                                        alt="돋보기"
+                                        class="search-img"
+                                    />
+                                    <input type="text" class="search-input" />
                                 </div>
-                                <div class="header-user-info">
-                                    <ul>
-                                        <li>
-                                            <a href="./cart.html"
-                                                ><i
-                                                    class="fa fa-shopping-cart"
-                                                    aria-hidden="true"
-                                                ></i
-                                            ></a>
-                                        </li>
-                                        <li>
-                                            <a href="./mypage.html"
-                                                ><i
-                                                    class="fa fa-user"
-                                                    blank="_target"
-                                                    aria-hidden="true"
-                                                ></i
-                                            ></a>
-                                        </li>
-                                    </ul>
+                            </form>
+                            <div class="header-title-info">
+                                <div class="header-info-item">
+                                    <a
+                                        href="./cart.html"
+                                        class="header-info-basket"
+                                    >
+                                        <img
+                                            src="https://svgsilh.com/svg/371980.svg"
+                                            alt="장바구니 이미지"
+                                            class="basket-img"
+                                        />
+                                    </a>
+                                </div>
+                                <div class="header-info-item">
+                                    <a
+                                        href="./mypage.html"
+                                        class="header-info-my"
+                                    >
+                                        <img
+                                            src="https://svgsilh.com/svg/158453.svg"
+                                            alt="사람모양 이미지"
+                                            class="my-img"
+                                        />
+                                    </a>
                                 </div>
                             </div>
-                        </div>
+                        </nav>
                     </div>
                 </div>
             </header>
@@ -68,7 +87,7 @@
                         </div>
 
                         <div class="order_ok-list">
-                            <ul class="list-row-1">
+                            <!-- <ul class="list-row-1">
                                 <li><a>주문번호</a></li>
                                 <li>2020060149794</li>
                             </ul>
@@ -96,7 +115,7 @@
                             <ul class="list-row-4">
                                 <li><a>배송메모</a></li>
                                 <li>배송 전에 미리 연락 바랍니다.</li>
-                            </ul>
+                            </ul> -->
                         </div>
                         <div class="order_ok-hmbtn">
                             <a href="../index.html">홈으로</a>
@@ -108,7 +127,8 @@
     </body>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-    <script src="../js/isLogin.js"></script>
+    <script src="../js/order_ok.js"></script>
+    <!-- <script src="../js/isLogin.js"></script>
     <script src="../api/logout.js"></script>
-    <script src="../api/mypage.js"></script>
+    <script src="../api/mypage.js"></script> -->
 </html>
