fix: 마이페이지 기능 분리

--- a/src/pages/mypage.html
+++ b/src/pages/mypage.html
@@ -154,5 +154,6 @@
         <script src="../api/logout.js"></script>
         <script src="../api/mypage.js"></script>
         <script src="../js/mypageRender.js"></script>
+        <script src="../api/getmypage.js"></script>
     </body>
 </html>
