create: cart, order btn in detail.js

--- a/src/pages/detail.html
+++ b/src/pages/detail.html
@@ -192,5 +192,5 @@
     <script src="../js/isLogin.js"></script>
     <script src="../api/logout.js"></script>
     <script src="../api/mypage.js"></script>
-    <script src="../api/detail.js"></script>
+    <script type="module" src="../api/detail.js"></script>
 </html>
