create: add cart, order in detail.html/js/css

--- a/src/pages/detail.html
+++ b/src/pages/detail.html
@@ -152,6 +152,22 @@
                         </article>
                     </div>
                     <!--main-container-->
+                    <div class="cart-alert">
+                        <div class="cart-alert-container">
+                            <div class="quit_btn">
+                                <button class="close-alert">&times;</button>
+                            </div>
+                            <div class="cart-alert-content">
+                                <h2>상품이 장바구니에 담겼습니다.</h2>
+                                <p>장바구니로 이동하시겠습니까?</p>
+                            </div>
+                            <div class="cart-alert-button">
+                                <button class="cancel-button">취소</button>
+                                <button class="confirm-button">확인</button>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </main>
 
