--- a/src/pages/order.html
+++ b/src/pages/order.html
@@ -5,7 +5,12 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>엘라딘</title>
-        <link rel="icon" href="../favicon.png" type="image/x-icon" sizes="16x16">
+        <link
+            rel="icon"
+            href="../favicon.png"
+            type="image/x-icon"
+            sizes="16x16"
+        />
         <link rel="stylesheet" type="text/css" href="../css/order.css" />
     </head>
     <body>
@@ -30,7 +35,10 @@
                     <div class="header-title">
                         <nav class="header-title-nav">
                             <div class="header-title-logo">
-                                <a href="../index.html" class="header-title-link">
+                                <a
+                                    href="../index.html"
+                                    class="header-title-link"
+                                >
                                     <div class="header-title-name">Eladin</div>
                                 </a>
                             </div>
@@ -47,7 +55,7 @@
                             <div class="header-title-info">
                                 <div class="header-info-item">
                                     <a
-                                        href="./pages/cart.html"
+                                        href="./cart.html"
                                         class="header-info-basket"
                                     >
                                         <img
@@ -59,7 +67,7 @@
                                 </div>
                                 <div class="header-info-item">
                                     <a
-                                        href="./pages/mypage.html"
+                                        href="./mypage.html"
                                         class="header-info-my"
                                     >
                                         <img
@@ -181,7 +189,10 @@
                                             type="text"
                                             name="address1"
                                             placeholder="주소"
-                                            <!-- value="" -->
+                                            <!--
+                                            value=""
+                                            --
+                                        />
                                         <input
                                             id="address2"
                                             class="essential"
@@ -211,7 +222,11 @@
                                         <p>배송메세지</p>
                                     </div>
                                     <div class="message-field field">
-                                        <select name="message" id="message" class="essential">
+                                        <select
+                                            name="message"
+                                            id="message"
+                                            class="essential"
+                                        >
                                             <option value="">
                                                 --메시지 선택 (선택사항)
                                             </option>
