--- a/src/pages/order_ok.html
+++ b/src/pages/order_ok.html
@@ -127,8 +127,8 @@
     </body>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="../js/isLogin.js"></script>
     <script src="../js/order_ok.js"></script>
-    <!-- <script src="../js/isLogin.js"></script>
     <script src="../api/logout.js"></script>
-    <script src="../api/mypage.js"></script> -->
+    <script src="../api/mypage.js"></script>
 </html>
