fix: add arrow in edit categry input

--- a/src/pages/manage_category.html
+++ b/src/pages/manage_category.html
@@ -96,6 +96,8 @@
                                             type="text"
                                             placeholder="수정할 현재 카테고리 이름을 입력해주세요."
                                         />
+                                        <i class="fa fa-arrow-right" aria-hidden="true"></i>
+
                                         <input
                                             class="new-category"
                                             type="text"
