fix: guest_login alert

--- a/src/pages/guest_login.html
+++ b/src/pages/guest_login.html
@@ -82,7 +82,7 @@
                                 type="text"
                                 name="name"
                                 id="name"
-                                placeholder="이름"
+                                placeholder="닉네임"
                             />
                         </div>
                         <div class="login-pw pwform">
