connect eladin's pick to detail page, fixed nav bar css in index.html/js, style.css

--- a/src/index.html
+++ b/src/index.html
@@ -93,7 +93,7 @@
                             <a
                                 href="./pages/book_category.html"
                                 class="all-category-link"
-                            >
+                                ><i class="fa fa-bars" aria-hidden="true"></i>
                                 <span class="all-category-text"
                                     >전체 카테고리</span
                                 >
@@ -138,12 +138,16 @@
                 <section class="introduction-corner container">
                     <h2 class="introduction-header">엘라딘의 선택</h2>
                     <div class="introduction-content">
-                        <img
-                            src="https://contents.kyobobook.co.kr/sih/fit-in/458x0/pdt/9788954641630.jpg"
-                            alt="book-cover"
-                        />
+                        <a href="./pages/detail.html"
+                            ><img
+                                src="https://contents.kyobobook.co.kr/sih/fit-in/458x0/pdt/9788954641630.jpg"
+                                alt="book-cover"
+                        /></a>
                         <div class="introduction-detail">
-                            <p class="title">쇼코의 미소</p>
+                            <a href="./pages/detail.html"
+                                ><p class="title">쇼코의 미소</p></a
+                            >
+
                             <p class="author">최은영 ・ 문학동네</p>
                             <p class="price">12,000원</p>
                             <p class="intro">
@@ -230,7 +234,11 @@
                     <div class="container">
                         <div class="row">
                             <ul>
-                                <li><a href="#" class="adminpage-button">관리자 페이지</a></li>
+                                <li>
+                                    <a href="#" class="adminpage-button"
+                                        >관리자 페이지</a
+                                    >
+                                </li>
                                 <li><a href="#">사이트 도움말</a></li>
                                 <li><a href="#">사이트 이용약관</a></li>
                                 <li><a href="#">사이트 운영원칙</a></li>
@@ -242,7 +250,9 @@
                                 <li><a href="#">책임의 한계와 법적고지</a></li>
                                 <li><a href="#">게시중단요청서비스</a></li>
                                 <li><a href="#">고객센터</a></li>
-                                <li><a href="./pages/magnage_category.html"></a></li>
+                                <li>
+                                    <a href="./pages/magnage_category.html"></a>
+                                </li>
                             </ul>
                             <address>
                                 Copyright ©
