fix: 카테고리 책 없는경우, animate css, 상세페이지 css detail

--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
                         <nav class="header-title-nav">
                             <div class="header-title-logo">
                                 <a href="." class="header-title-link">
-                                    <div class="header-title-name">Eladin</div>
+                                    <div class="header-title-name animated bounceIn">Eladin</div>
                                 </a>
                             </div>
                             <form class="header-title-search" role="seacrch">
