fix: mypage css and input -> div tag (userName)

--- a/src/pages/modify_mypage.html
+++ b/src/pages/modify_mypage.html
@@ -111,12 +111,7 @@
                                 <p>아이디</p>
                             </div>
                             <div class="id-field field">
-                                <input
-                                    type="text"
-                                    class="change-userid"
-                                    name="userid"
-                                    disabled
-                                />
+                                <div class="change-userid"></div>
                             </div>
                             <div class="email default">
                                 <p>이메일</p>
