--- a/src/pages/order.html
+++ b/src/pages/order.html
@@ -211,7 +211,7 @@
                                         <input
                                             type="tel"
                                             id="phone-num"
-                                            class="essential"
+                                            class="essential password"
                                             name="phone-num"
                                             maxlength="13"
                                         />
