feat: 로그인, 정보수정 유효성 검사 api

--- a/src/pages/modify_mypage.html
+++ b/src/pages/modify_mypage.html
@@ -106,6 +106,7 @@
                                     class="change-username"
                                     name="username"
                                 />
+                                <small>Error message</small>
                             </div>
                             <div class="id default">
                                 <p>아이디</p>
