--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -103,13 +103,13 @@
                             </div>
                             <div class="signup-name">
                                 <label for="name" class="signup-form-label"
-                                    >성함</label
+                                    >닉네임</label
                                 >
                                 <input
                                     type="text"
                                     name="name"
                                     id="name"
-                                    placeholder="성함"
+                                    placeholder="닉네임"
                                 />
                                 <small>Error message</small>
                             </div>
