이미지 전송 테스트중

--- a/src/pages/manage_products.html
+++ b/src/pages/manage_products.html
@@ -50,6 +50,11 @@
                             <div>
                                 <label for="img">이미지</label>
                                 <input type="text" class="update-img" name="img" />
+                                <form action="http://localhost:5500/books/upload" method="post" enctype="multipart/form-data">
+                                    <input type="file" name="img" accept="image/jpeg, image/png" />
+                                    <button type="submit">Upload Image</button>
+                                
+
                             </div>
                             <div>
                                 <label for="publisher">출판사</label>
@@ -69,7 +74,8 @@
 
                         <div class="modal-button">
                             <button class="update-modal-close">취소</button>
-                            <button class="add-product-complete">완료</button>
+                            <button type ="submit" class="add-product-complete">완료</button>
+                        </form>
                         </div>
                     </div>
                 </div>
