fix: module error

--- a/src/pages/order_ok.html
+++ b/src/pages/order_ok.html
@@ -5,7 +5,12 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="icon" href="../favicon.png" type="image/x-icon" sizes="16x16">
+        <link
+            rel="icon"
+            href="../favicon.png"
+            type="image/x-icon"
+            sizes="16x16"
+        />
         <link rel="stylesheet" href="../css/order_ok.css" />
         <title>Eladin</title>
     </head>
@@ -124,6 +129,15 @@
                 </div>
             </article>
         </div>
+        <!-- 모달 영역 시작 -->
+        <div class="modal">
+            <div class="modal-content">
+                <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
+                <p class="modal-text">모달 내용ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ</p>
+                <button class="close-modal-btn">&times;</button>
+            </div>
+        </div>
+        <!-- 모달 영역 끗~ -->
     </body>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
