fix: syntax error

--- a/src/index.html
+++ b/src/index.html
@@ -41,11 +41,11 @@
                         <nav class="header-title-nav">
                             <div class="header-title-logo">
                                 <a href="." class="header-title-link">
-                                    <div class="header-title-name animated bounceIn">Eladin</div>
+                                    <div class="header-title-name animated flipInX">Eladin</div>
                                 </a>
                             </div>
                             <form class="header-title-search" role="seacrch">
-                                <div class="header-title-search-bar">
+                                <div class="header-title-search-bar animated flipInX">
                                     <img
                                         src="https://svgsilh.com/svg/1093183.svg"
                                         alt="돋보기"
