fix: html page title tag

--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -10,7 +10,7 @@
             type="image/x-icon"
             sizes="16x16"
         />
-        <title>Eladin</title>
+        <title>엘라딘</title>
         <link rel="stylesheet" href="../css/login.css" />
     </head>
     <body>
