--- a/src/pages/modify_mypage.html
+++ b/src/pages/modify_mypage.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
+        <title>엘라딘</title>
         <link
             rel="icon"
             href="../favicon.png"
@@ -98,7 +98,7 @@
                         <h3>정보 변경</h3>
                         <div class="table">
                             <div class="name default">
-                                <p>이름</p>
+                                <p>닉네임</p>
                             </div>
                             <div class="name-field field">
                                 <input
