--- a/src/pages/order_ok.html
+++ b/src/pages/order_ok.html
@@ -1,6 +1,6 @@
 <!--주문완료-->
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -12,7 +12,7 @@
             sizes="16x16"
         />
         <link rel="stylesheet" href="../css/order_ok.css" />
-        <title>Eladin</title>
+        <title>엘라딘</title>
     </head>
     <body>
         <div id="wrap">
