--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -11,7 +11,7 @@
             sizes="16x16"
         />
         <link rel="stylesheet" href="../css/signup.css" />
-        <title>Eladin</title>
+        <title>엘라딘</title>
     </head>
     <body>
         <div id="wrap">
