--- a/src/pages/book_category.html
+++ b/src/pages/book_category.html
@@ -330,6 +330,12 @@
                                 </div>
                             </a> -->
                     </section>
+                    <!-- 스크롤 버튼 -->
+                    <button class="scroll-to-top">
+                        <i class="fa fa-chevron-up" aria-hidden="true"></i>
+                        <p>TOP</p>
+                    </button>
+                    <!-- 모달 -->
                     <div class="cart-alert">
                         <div class="cart-alert-container">
                             <div class="quit_btn">
