feat: guest Login valid check and fix css

--- a/src/pages/guest_login.html
+++ b/src/pages/guest_login.html
@@ -17,7 +17,7 @@
         <div id="wrap">
             <header id="header">
                 <div class="container">
-                    <div class="row">
+                    <div class="row mt30">
                         <div class="header">
                             <div class="header-logo">
                                 <!-- <img src="../img/test.jpeg" alt="로고 이미지"> -->
@@ -31,27 +31,6 @@
                                         </li>
                                         <li>
                                             <a href="./login.html">로그인</a>
-                                        </li>
-                                    </ul>
-                                </div>
-                                <div class="header-user-info">
-                                    <ul>
-                                        <li>
-                                            <a href="./cart.html"
-                                                ><i
-                                                    class="fa fa-shopping-cart"
-                                                    aria-hidden="true"
-                                                ></i
-                                            ></a>
-                                        </li>
-                                        <li>
-                                            <a href="./mypage.html"
-                                                ><i
-                                                    class="fa fa-user"
-                                                    blank="_target"
-                                                    aria-hidden="true"
-                                                ></i
-                                            ></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -69,37 +48,41 @@
                         처리와 주문 조회를 위한 아래의 정보를 입력해주세요.
                     </p>
                     <div class="login-area">
-                        <div class="login-email">
+                        <div class="login-email field">
                             <input
                                 type="text"
                                 name="email"
                                 id="email"
                                 placeholder="E-mail"
                             />
+                            <small>Error message</small>
                         </div>
-                        <div class="login-name">
+                        <div class="login-name field">
                             <input
                                 type="text"
                                 name="name"
                                 id="name"
                                 placeholder="닉네임"
                             />
+                            <small>Error message</small>
                         </div>
-                        <div class="login-pw pwform">
+                        <div class="login-pw pwform field">
                             <input
                                 type="password"
                                 name="password"
                                 id="password"
                                 placeholder="비밀번호"
                             />
+                            <small>Error message</small>
                         </div>
-                        <div class="check-pw pwform">
+                        <div class="check-pw pwform field">
                             <input
                                 type="password"
                                 name="check-password"
                                 id="check-password"
                                 placeholder="비밀번호 확인"
                             />
+                            <small>Error message</small>
                         </div>
                         <small>Error message</small>
 
