--- a/src/pages/book_category.html
+++ b/src/pages/book_category.html
@@ -330,6 +330,21 @@
                                 </div>
                             </a> -->
                     </section>
+                    <!-- 모달 영역 시작 -->
+                    <div class="modal">
+                        <div class="modal-content">
+                            <i
+                                class="fa fa-exclamation-circle"
+                                aria-hidden="true"
+                            ></i>
+                            <p class="modal-text">
+                                모달 내용ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ
+                            </p>
+                            <button class="close-modal-btn">&times;</button>
+                        </div>
+                    </div>
+                    <!-- 모달 영역 끗~ -->
+
                     <!-- 스크롤 버튼 -->
                     <button class="scroll-to-top">
                         <i class="fa fa-chevron-up" aria-hidden="true"></i>
