--- a/src/pages/cart.html
+++ b/src/pages/cart.html
@@ -132,6 +132,21 @@
                     </div>
                 </div>
             </main>
+            <!-- 모달 -->
+            <div class="cart-alert">
+                <div class="cart-alert-container">
+                    <div class="quit_btn">
+                        <button class="close-alert">&times;</button>
+                    </div>
+                    <div class="cart-alert-content">
+                        <h2>정말 삭제하시겠습니까?</h2>
+                    </div>
+                    <div class="cart-alert-button">
+                        <button class="cancel-button">취소</button>
+                        <button class="confirm-button">확인</button>
+                    </div>
+                </div>
+            </div>
             <!-- 모달 영역 시작 -->
             <div class="modal">
                 <div class="modal-content">
