feat: search 기능 구현

--- a/src/index.html
+++ b/src/index.html
@@ -48,16 +48,17 @@
                                     <div class="header-title-name animated flipInX">Eladin</div>
                                 </a>
                             </div>
-                            <form class="header-title-search" role="seacrch">
+                            <div class="header-title-search">
                                 <div class="header-title-search-bar animated flipInX">
                                     <img
                                         src="https://svgsilh.com/svg/1093183.svg"
                                         alt="돋보기"
                                         class="search-img"
                                     />
-                                    <input type="text" class="search-input" />
+                                    <input type="text" class="search-input"/>
+                                    <button class="search-button">검색</button>
                                 </div>
-                            </form>
+                            </div>
                             <div class="header-title-info">
                                 <div class="header-info-item">
                                     <a
@@ -296,5 +297,6 @@
     <script src="./api/indexLogout.js"></script>
     <script src="./api/indexMypage.js"></script>
     <script type="module" src="./js/indexedDB.js"></script>
+    <script src="./api/indexSearch.js"></script>
     <script src="./js/swiper.js"></script>
 </html>
