--- a/src/pages/mypage.html
+++ b/src/pages/mypage.html
@@ -46,16 +46,17 @@
                                     <div class="header-title-name">Eladin</div>
                                 </a>
                             </div>
-                            <form class="header-title-search" role="seacrch">
-                                <div class="header-title-search-bar">
+                            <div class="header-title-search">
+                                <div class="header-title-search-bar animated flipInX">
                                     <img
                                         src="https://svgsilh.com/svg/1093183.svg"
                                         alt="돋보기"
                                         class="search-img"
                                     />
-                                    <input type="text" class="search-input" />
+                                    <input type="text" class="search-input"/>
+                                    <button class="search-button">검색</button>
                                 </div>
-                            </form>
+                            </div>
                             <div class="header-title-info">
                                 <div class="header-info-item">
                                     <a
@@ -170,5 +171,6 @@
         <script src="../js/mypageRender.js"></script>
         <script src="../api/logout.js"></script>
         <script src="../api/getmypage.js"></script>
+        <script src="../api/search.js"></script>
     </body>
 </html>
