--- a/src/pages/search.html
+++ b/src/pages/search.html
@@ -10,11 +10,11 @@
             type="image/x-icon"
             sizes="16x16"
         />
-        <link rel="stylesheet" href="../css/cart.css" />
+        <link rel="stylesheet" href="../css/book_category.css" />
         <title>엘라딘</title>
     </head>
     <body>
-        <div class="app-container">
+        <div class="app-title">
             <!-- 헤더 영역 시작 -->
             <header class="header">
                 <div class="header-container container">
@@ -85,78 +85,53 @@
             <!-- 메인 영역 시작 -->
             <main class="main">
                 <div class="main-container container">
-                    <section class="cart-section">
-                        <div class="cart-section-top">
-                            <label class="cart-list-all-select">
-                                <input
-                                    type="checkbox"
-                                    class="cart-list-all-select-btn"
-                                />
-                                <span class="cart-list-all-select-text"
-                                    >전체 선택</span
-                                >
-                            </label>
-                            <button
-                                type="button"
-                                class="cart-list-all-select-delete"
-                            >
-                                전체 삭제
-                            </button>
-                        </div>
-                        <ul class="cart-section-list"></ul>
+                    <nav class="nav-side-category-bar"></nav>
+                    <section class="category-book-list-section">
+                        <div class="category-book-title">검색 결과</div>
+                        <ul class="category-book-list">
+                            
+                        </ul>
                     </section>
-                    <div class="cart-section-bottom">
-                        <div class="cart-section-select-item-count">
-                            <div class="cart-section-select-check-ico"></div>
-                            <span class="cart-section-select-item-count-text"
-                                >3개를 선택하셨습니다.</span
-                            >
-                        </div>
-                        <div class="cart-section-select-item-amount">
-                            <div class="cart-section-select-item-total">
-                                총 상품 금액
-                            </div>
-                            <p class="cart-section-select-item-total-amount">
-                                38,600원
+                    <!-- 모달 영역 시작 -->
+                    <div class="modal">
+                        <div class="modal-content">
+                            <i
+                                class="fa fa-exclamation-circle"
+                                aria-hidden="true"
+                            ></i>
+                            <p class="modal-text">
+                                모달 내용ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ
                             </p>
+                            <button class="close-modal-btn">&times;</button>
                         </div>
-                        <div class="cart-section-btns">
-                            <a
-                                href="./guest_login.html"
-                                class="no-user-order-btn"
-                                >비회원 주문하기</a
-                            >
-                            <a href="./order.html" class="user-order-btn"
-                                >회원 주문하기</a
-                            >
+                    </div>
+                    <!-- 모달 영역 끗~ -->
+
+                    <!-- 스크롤 버튼 -->
+                    <button class="scroll-to-top">
+                        <i class="fa fa-chevron-up" aria-hidden="true"></i>
+                        <p>TOP</p>
+                    </button>
+                    <!-- 모달 -->
+                    <div class="cart-alert">
+                        <div class="cart-alert-container">
+                            <div class="quit_btn">
+                                <button class="close-alert">&times;</button>
+                            </div>
+                            <div class="cart-alert-content">
+                                <h2>상품이 장바구니에 담겼습니다.</h2>
+                                <p>장바구니로 이동하시겠습니까?</p>
+                            </div>
+                            <div class="cart-alert-button">
+                                <button class="cancel-button">취소</button>
+                                <button class="confirm-button">확인</button>
+                            </div>
                         </div>
                     </div>
                 </div>
             </main>
-            <!-- 모달 -->
-            <div class="cart-alert">
-                <div class="cart-alert-container">
-                    <div class="quit_btn">
-                        <button class="close-alert">&times;</button>
-                    </div>
-                    <div class="cart-alert-content">
-                        <h2>정말 삭제하시겠습니까?</h2>
-                    </div>
-                    <div class="cart-alert-button">
-                        <button class="cancel-button">취소</button>
-                        <button class="confirm-button">확인</button>
-                    </div>
-                </div>
-            </div>
-            <!-- 모달 영역 시작 -->
-            <div class="modal">
-                <div class="modal-content">
-                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
-                    <p class="modal-text">모달 내용ㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ</p>
-                    <button class="close-modal-btn">&times;</button>
-                </div>
-            </div>
-            <!-- 모달 영역 끗~ -->
+            <!-- 메인 영역 종료 -->
+
             <!-- 푸터 영역 시작 -->
             <footer id="footer" style="border: none">
                 <div class="footer">
@@ -190,12 +165,12 @@
             </footer>
             <!-- 푸터 영역 종료 -->
         </div>
-        <script type="module" src="../js/cart.js"></script>
     </body>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="../js/isLogin.js"></script>
-    <script src="../api/logout.js"></script>
     <script src="../api/mypage.js"></script>
+    <script src="../api/logout.js"></script>
     <script src="../api/search.js"></script>
+    <script src="../js/search.js"></script>
 </html>
