fix: header logo style

--- a/src/index.html
+++ b/src/index.html
@@ -44,8 +44,8 @@
                     <div class="header-title">
                         <nav class="header-title-nav">
                             <div class="header-title-logo">
-                                <a href="." class="header-title-link">
-                                    <div class="header-title-name animated flipInX">Eladin</div>
+                                <a href="./index.html" class="header-title-link">
+                                    <div class="header-title-name animated flipInX">Eladin <span>엘라딘이에요!</span></div>
                                 </a>
                             </div>
                             <div class="header-title-search">
