fix: fix mypage modal for guest user in mypage.js, add connection from book title to detail page in book-category.js

--- a/src/pages/book_category.html
+++ b/src/pages/book_category.html
@@ -41,13 +41,15 @@
                                 </a>
                             </div>
                             <div class="header-title-search">
-                                <div class="header-title-search-bar animated flipInX">
+                                <div
+                                    class="header-title-search-bar animated flipInX"
+                                >
                                     <img
                                         src="https://svgsilh.com/svg/1093183.svg"
                                         alt="돋보기"
                                         class="search-img"
                                     />
-                                    <input type="text" class="search-input"/>
+                                    <input type="text" class="search-input" />
                                     <button class="search-button">검색</button>
                                 </div>
                             </div>
@@ -410,7 +412,7 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script type="module" src="../js/book_category.js"></script>
     <script src="../js/isLogin.js"></script>
-    <script src="../api/mypage.js"></script>
     <script src="../api/logout.js"></script>
+    <script src="../api/mypage.js"></script>
     <script src="../api/search.js"></script>
 </html>
