--- a/src/pages/search.html
+++ b/src/pages/search.html
@@ -41,13 +41,15 @@
                                 </a>
                             </div>
                             <div class="header-title-search">
-                                <div class="header-title-search-bar animated flipInX">
+                                <div
+                                    class="header-title-search-bar animated flipInX"
+                                >
                                     <img
                                         src="https://svgsilh.com/svg/1093183.svg"
                                         alt="돋보기"
                                         class="search-img"
                                     />
-                                    <input type="text" class="search-input"/>
+                                    <input type="text" class="search-input" />
                                     <button class="search-button">검색</button>
                                 </div>
                             </div>
@@ -88,9 +90,7 @@
                     <nav class="nav-side-category-bar"></nav>
                     <section class="category-book-list-section">
                         <div class="category-book-title">검색 결과</div>
-                        <ul class="category-book-list">
-                            
-                        </ul>
+                        <ul class="category-book-list"></ul>
                     </section>
                     <!-- 모달 영역 시작 -->
                     <div class="modal">
