fix:load  mypage.js

--- a/src/pages/order_ok.html
+++ b/src/pages/order_ok.html
@@ -133,6 +133,6 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="../js/isLogin.js"></script>
     <script src="../js/order_ok.js"></script>
-    <script src="../api/mypage.js"></script>
     <script src="../api/logout.js"></script>
+    <script defer src="../api/mypage.js"></script>
 </html>
